11.may (ws)
      - fix #8998: Exporting MIDI causes crash
      - fix #10620: Copy&Paste of notes changes flats to sharps
9.may (ws)
      - text editor additions: indent & lists
5.may (ws)
      - modified musical symbols in FreeSerif font (adjust baseline so that
        tempo markings look better) and rename it to FreeSerifMscore so that
        qt loads this modified font and not the system font with same name.
      (la)
      - set notehead shape from plugin framework
4.may (ws)
      - implemented "delete profile"
      (la)
      - fix #9342 : repeat entry doesn't scroll display
3.may (ws)
      - raster for vertical frames
      - add x/y spin box to move position in edit mode
      - fix for slurs starting at staff n+1 and ending at staff n
2.may (ws)
      - ottava style additions similar to volta
      - ottava backward compatibility
      - fix backward compatibility for voltas
      - allow diagonal hairpins (enable in hairpin property menu)
28.apr (ws)
      - style additions for volta
      - fix #8996: crash when extending note length across bar line
27.apr (ws)
      - fix #9920: make beams not movable
      - fix #10416: Page settings crash for empty tab
      - closed #10165: measure nu,. every n shows number (every n)+1
        (patch from Miwarre)
      - fix #10440: Another crash on time signature change (patch from Miwarre)
      - fix #10432: "Parts is broken"
26.apr (ws)
      - implement #10228: Move "Save as..." formats such as .pdf to dedicated
        "Export" menu item
25.apr (ws)
      - implement Album manager
23.apr (ws)
      - move pageOffset from PageSettings() to Score
      - move PageSettings() to Style()
      - fix #10370: Shortcuts cannot be cleared
      - implement "reset to defaults" in preferences-shortcuts dialog
      - fix #3459: Beaming of sixteenth and eight note sequences in 4/4
      - fix #10365: Whole rests corrupt measure on re-loading scores with time
        longer than 4/4 (patch from Miwarre)